# ToDoApp

todobackend/: db.sqlite3  main.py  pyproject.toml
todobackend/config/: settings.py  urls.py
todobackend/tasks/: models.py  views.py
todobackend/tasks/migrations/: 0001_initial.py
todobackend/users/: models.py  serializers.py  urls.py  views.py
todobackend/users/migrations/: 0001_initial.py
todowebclient/: package.json  pnpm-lock.yaml
todowebclient/src/: App.tsx  index.css
todowebclient/src/api/: tasks.ts
todowebclient/src/components/: TaskForm.tsx
todowebclient/src/features/auth/: index.ts
todowebclient/src/features/auth/api/: auth-api.ts
todowebclient/src/features/auth/components/: RegisterForm.tsx
todowebclient/src/features/auth/types/: index.ts
todowebclient/src/features/tasks/: index.ts
todowebclient/src/features/tasks/api/: tasks-api.ts
todowebclient/src/features/tasks/components/: TaskForm.tsx  TaskList.tsx
todowebclient/src/features/tasks/hooks/: useTaskForm.ts
todowebclient/src/features/tasks/pages/: TasksPage.tsx
todowebclient/src/features/tasks/types/: index.ts
todowebclient/src/lib/: axios.ts
todowebclient/src/types/: task.ts
